unpackaged/main/default/objects/ACG_Holidays__mdt/fields/ACG_Description__c.field-meta.xml
<CustomField>
    <fullName>ACG_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>