unpackaged/main/default/objects/ACG_Holidays__mdt/fields/ACG_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_End_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>