unpackaged/main/default/objects/ACG_Holidays__mdt/fields/ACG_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>